force-app/main/default/objects/ExcerciseInTrain__c/ExcerciseInTrain__c.object-meta.xml
<CustomObject>
    <label>ExcerciseInTrain</label>
    <nameField>
        <label>Excercise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExcerciseInTrains</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>