force-app/main/default/objects/ExcerciseInTrain__c/fields/Excercise__c.field-meta.xml
<CustomField>
    <fullName>Excercise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Excercise</label>
    <referenceTo>Excercise__c</referenceTo>
    <relationshipLabel>ExcerciseInTrains</relationshipLabel>
    <relationshipName>ExcerciseInTrains</relationshipName>
    <type>Lookup</type>
</CustomField>