force-app/main/default/objects/ExcerciseInTrain__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>