force-app/main/default/objects/ExcerciseInTrain__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>